log
Thu 07 Sep 2023 07:21:24 PM UTC: 
 tests:  0|6
total_score: 0/70
b115892
Thu 07 Sep 2023 07:27:23 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  0|0
7a0d4fe
Thu 07 Sep 2023 07:28:06 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
3954f96
Thu 07 Sep 2023 07:30:50 PM UTC: 
 hashmap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:58:12: error: ‘Pair’ has no member named ‘next’
   58 |     newPair->next = map->buckets[index];
      |            ^~
Compilation failed
261800d
Thu 07 Sep 2023 07:32:23 PM UTC: 
 hashmap.c | 44 ++++++++++++++++++++++++--------------------
 1 file changed, 24 insertions(+), 20 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:92:12: error: ‘Pair’ has no member named ‘next’
   92 |     newPair->next = map->buckets[index];
      |            ^~
Compilation failed
240a531
Thu 07 Sep 2023 07:35:15 PM UTC: 
 hashmap.c | 44 +++++++++++++++++++++-----------------------
 1 file changed, 21 insertions(+), 23 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:58:12: error: ‘Pair’ has no member named ‘next’
   58 |     newPair->next = map->buckets[index];
      |            ^~
Compilation failed
ee55c76
Thu 07 Sep 2023 07:36:45 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createPair’:
hashmap.c:23:19: error: unused variable ‘next’ [-Werror=unused-variable]
   23 |     struct Pair * next; // Apuntador al siguiente par en caso de colisión
      |                   ^~~~
hashmap.c: In function ‘insertMap’:
hashmap.c:59:12: error: ‘Pair’ has no member named ‘next’
   59 |     newPair->next = map->buckets[index];
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
522d4f0
Thu 07 Sep 2023 07:37:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createPair’:
hashmap.c:23:12: error: unused variable ‘next’ [-Werror=unused-variable]
   23 |     Pair * next; // Apuntador al siguiente par en caso de colisión
      |            ^~~~
hashmap.c: In function ‘insertMap’:
hashmap.c:59:12: error: ‘Pair’ has no member named ‘next’
   59 |     newPair->next = map->buckets[index];
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
5d3871e
Thu 07 Sep 2023 07:40:29 PM UTC: 
 hashmap.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:33: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
   50 |     Pair * newPair = createPair(_strdup(key), value);
      |                                 ^~~~~~~
      |                                 strdup
hashmap.c:50:33: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |     Pair * newPair = createPair(_strdup(key), value);
      |                                 ^~~~~~~~~~~~
      |                                 |
      |                                 int
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
test.c: At top level:
test.c:8:8: error: conflicting types for ‘_strdup’; have ‘char *(const char *)’
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c:50:33: note: previous implicit declaration of ‘_strdup’ with type ‘int()’
   50 |     Pair * newPair = createPair(_strdup(key), value);
      |                                 ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6ac638a
Thu 07 Sep 2023 07:41:57 PM UTC: 
 hashmap.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccGk7usZ.o: in function `enlarge_test':
test.c:(.text+0x11c0): undefined reference to `enlarge'
collect2: error: ld returned 1 exit status
Compilation failed
b936a17
Thu 07 Sep 2023 07:43:29 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 20/70
43d0c21
Thu 07 Sep 2023 07:45:41 PM UTC: 
 hashmap.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:65:23: error: ‘Pair’ has no member named ‘next’
   65 |         while (current->next != NULL) {
      |                       ^~
hashmap.c:66:30: error: ‘Pair’ has no member named ‘next’
   66 |             current = current->next;
      |                              ^~
hashmap.c:68:16: error: ‘Pair’ has no member named ‘next’
   68 |         current->next = newPair;
      |                ^~
Compilation failed
397f3e5
Thu 07 Sep 2023 07:46:44 PM UTC: 
 hashmap.c | 16 ++++++----------
 1 file changed, 6 insertions(+), 10 deletions(-)
 tests:  5|4
total_score: 30/70
85a0613
Fri 08 Sep 2023 06:10:29 PM UTC: 
 hashmap.c | 42 +++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 41 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
cac237a
Fri 08 Sep 2023 06:10:56 PM UTC: 
 hashmap.c | 29 -----------------------------
 1 file changed, 29 deletions(-)
 tests:  5|4
total_score: 30/70
0f3b249
Fri 08 Sep 2023 06:15:31 PM UTC: 
 hashmap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:127:12: error: variable ‘result’ set but not used [-Werror=unused-but-set-variable]
  127 |     Pair * result = NULL;
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
6ce9cbc
Fri 08 Sep 2023 06:15:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
bc16036
Fri 08 Sep 2023 06:16:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
c6b2088
Fri 08 Sep 2023 06:19:19 PM UTC: 
 hashmap.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
 tests:  8|3
total_score: 40/70
8ab24b5
Fri 08 Sep 2023 06:19:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
0753f46
Fri 08 Sep 2023 06:19:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
74c5db0
Fri 08 Sep 2023 07:03:03 PM UTC: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
f1a9f62
